[gd_scene load_steps=10 format=3 uid="uid://cy8x07fa7ckcm"]

[ext_resource type="Script" uid="uid://cjuqgs2oo1dh4" path="res://gui/sharks_head/sharks_head.gd" id="1_7m03r"]
[ext_resource type="Texture2D" uid="uid://bbok5fb4rx37r" path="res://assets/ui/shark_bark.png" id="2_piqo5"]
[ext_resource type="Texture2D" uid="uid://dbq5qtdgehnc1" path="res://assets/ui/shark_bark_red.png" id="3_piqo5"]

[sub_resource type="Animation" id="Animation_rseq1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_piqo5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.20943952]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(398.61093, -11.579778)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qr1yw"]
resource_name = "slide_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(398.61093, -11.579778), Vector2(-0.611, -11.58)]
}

[sub_resource type="Animation" id="Animation_aylvo"]
resource_name = "slide_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jxqgu"]
_data = {
&"RESET": SubResource("Animation_rseq1"),
&"slide_in": SubResource("Animation_qr1yw"),
&"slide_out": SubResource("Animation_aylvo")
}

[sub_resource type="Animation" id="Animation_piqo5"]
resource_name = "shake"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.0166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.20943952, 0.10471975511965978, -0.20943952]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_piqo5"), ExtResource("3_piqo5"), ExtResource("2_piqo5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rseq1"]
_data = {
&"shake": SubResource("Animation_piqo5")
}

[node name="SharksHead" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -73.0
offset_right = -101.0
offset_bottom = -73.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.48919883, 0.51814467)
script = ExtResource("1_7m03r")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(398.61093, -11.579778)
rotation = -0.20943952
texture = ExtResource("2_piqo5")

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jxqgu")
}

[node name="ShakePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rseq1")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
